<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 - All Rights Reserved - Arash Hatami
  -->

<resources>
    <string name="app_name">ZiMia</string>
    <string name="app_website">http://zimia.ir</string>
    <string name="app_email">info@zimia.ir</string>
    <string name="app_telegram">http://telegram.me/zimia_ir</string>

    <string name="help_title">راهنما</string>
    <string name="about_title">درباره ما</string>
    <string name="contact_title">تماس با ما</string>
    <string name="item_edit_title">ویرایش سفارش</string>
    <string name="help_text">متن راهنما</string>
    <string name="about_text">آیا برای شما هم اتفاق افتاده است که به خاطر خرید یک کالای کوچک مجبور باشید که بیرون از خانه بروید و یک مسیر طولانی را طی کنید ؟ خانه یا خوابگاهتان دور از مرکز شهر باشد و به خاطر خرید یک وعده غذای ساده چند ساعت وقت صرف کرده باشید ؟ تا به حال شده مهمان ناخوانده ای دیروقت به خانه شما بیاید و اقلام پذیرایی نداشته و مغازه ها هم بسته باشند ؟ و یا شب امتحان برای کپی یک جزوه از خوابگاه داخل محوطه دانشگاه تا مرکز شهر بروید تا فقط چند برگه کپی کنید ؟ اگر یکی از این موقعیت ها را تجربه کرده باشید ، به یک سامانه جامع همیشه همراه با قابلیت ارسال کالای سریع نیاز دارید ... زیمیا به این نیاز شما پاسخ خواهد داد</string>
    <string name="contact_text">می توانید از طریق راه های زیر با ما در تماس باشید</string>

    <string name="resturans">Restaurants</string>
    <string name="fastfoods">FastFoods</string>
    <string name="markets">Markets</string>
    <string name="map">Map</string>

    <string name="hint_email">تلفن همراه</string>
    <string name="hint_password">کلمه عبور</string>
    <string name="hint_password2">تکرار کلمه عبور</string>
    <string name="hint_newpassword">کلمه عبور جدید</string>
    <string name="hint_newpassword2">تکرار کلمه عبور جدید</string>
    <string name="hint_name">نام کامل</string>
    <string name="hint_address">آدرس</string>
    <string name="hint_phone">شماره تلفن</string>
    <string name="hint_desc">توضیحات</string>
    <string name="hint_count">تعداد</string>

    <string name="btn_logout">خروج</string>
    <string name="btn_edit">ویرایش</string>
    <string name="btn_charge">شارژ کیف پول</string>
    <string name="btn_confirm">تایید</string>
    <string name="btn_change_password">تغییر کلمه عبور</string>
    <string name="btn_login">ورود</string>
    <string name="btn_pay">پرداخت</string>
    <string name="btn_clear">خالی کردن سبد</string>
    <string name="btn_register">ثبت نام</string>
    <string name="btn_link_to_register">عضو نیستید ؟ حساب کاربری ایجاد کنید</string>
    <string name="btn_link_to_login">ثبت نام کرده اید ؟ وارد شوید</string>

    <string name="welcome">خوش آمدید</string>
    <string name="name">نام کامل</string>
    <string name="close">بستن</string>
    <string name="cancle">انصراف</string>
    <string name="confirm">تایید</string>
    <string name="delete">حذف</string>
    <string name="add">اضافه به سبد خرید</string>

    <string name="item_pic">عکس محصول</string>
    <string name="item_name">نام محصول</string>
    <string name="item_desc">توضیح محصول</string>
    <string name="item_price">قیمت محصول</string>
    <string name="item_type">دسته بندی</string>
</resources>