<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:showIn="@layout/drawer">

    <ImageView
        android:id="@+id/btnViewResturans"
        android:layout_width="match_parent"
        android:layout_marginTop="75dp"
        app:srcCompat="@drawable/res"
        android:contentDescription="@string/resturans"
        android:layout_height="80dp" />

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@drawable/dev"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_height="2dp" />

    <ImageView
        android:id="@+id/btnViewFastFoods"
        android:layout_width="match_parent"
        app:srcCompat="@drawable/fast"
        android:contentDescription="@string/fastfoods"
        android:layout_height="80dp" />

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@drawable/dev"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_height="2dp" />

    <ImageView
        android:id="@+id/btnViewMarkets"
        android:layout_width="match_parent"
        app:srcCompat="@drawable/mark"
        android:contentDescription="@string/markets"
        android:layout_height="80dp" />


    <ImageView
        android:id="@+id/btnViewMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/map"
        app:srcCompat="@drawable/map"/>

</LinearLayout>