<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ir.hatamiarash.zimia.PersianEditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <ir.hatamiarash.zimia.PersianEditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <ir.hatamiarash.zimia.PersianEditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <ir.hatamiarash.zimia.PersianEditText
            android:id="@+id/password2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"
            android:hint="@string/hint_password2"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <ir.hatamiarash.zimia.PersianEditText
            android:id="@+id/address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"
            android:hint="@string/hint_address"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <ir.hatamiarash.zimia.PersianEditText
            android:id="@+id/phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <!-- Login Button -->

        <ir.hatamiarash.zimia.PersianButton
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <!-- Link to Login Screen -->

        <ir.hatamiarash.zimia.PersianButton
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>