<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 - All Rights Reserved - Arash Hatami
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/inner_background"
              android:baselineAligned="false"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <helper.PersianEditText
            android:id="@+id/new_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/hint_name"
            android:inputType="textCapWords|textAutoComplete|textPersonName"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray3"/>

        <helper.PersianEditText
            android:id="@+id/new_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/hint_email"
            android:inputType="number|phone"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray3"/>

        <helper.PersianEditText
            android:id="@+id/new_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/hint_address"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray3"/>

        <helper.PersianButton
            android:id="@+id/btnConfirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dip"
            android:layout_marginTop="20dip"
            android:background="@color/accent"
            android:text="@string/btn_confirm"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <helper.PersianEditText
            android:id="@+id/new_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/gray"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/hint_newpassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray3"/>

        <helper.PersianEditText
            android:id="@+id/new_password2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/hint_newpassword2"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray3"/>

        <helper.PersianButton
            android:id="@+id/btnChangePassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/accent"
            android:text="@string/btn_change_password"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>