<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 - All Rights Reserved - Arash Hatami
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/item_detail"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/inner_background"
              android:orientation="vertical"
              android:weightSum="1">

    <ImageView
        android:id="@+id/ItemImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/item_pic"
        android:padding="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"/>

    <helper.PersianTextView
        android:id="@+id/ItemName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/item_name"
        android:textAlignment="center"
        android:textSize="26sp"/>

    <helper.PersianTextView
        android:id="@+id/ItemDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/item_desc"
        android:textAlignment="center"
        android:textSize="17sp"/>

    <helper.PersianTextView
        android:id="@+id/ItemType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/item_type"
        android:textAlignment="center"
        android:textSize="15sp"/>

    <helper.PersianTextView
        android:id="@+id/ItemPrice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:text="@string/item_price"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/dec"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:text="-"
            android:textSize="30sp"/>

        <helper.PersianEditText
            android:id="@+id/count"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/hint_count"
            android:inputType="number"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            />

        <Button
            android:id="@+id/inc"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:text="+"
            android:textSize="30sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <helper.PersianButton
            android:id="@+id/add"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="20sp"/>

        <helper.PersianButton
            android:id="@+id/web3d_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:background="@color/md_amber_A700"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/web3d"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>