<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 - All Rights Reserved - Arash Hatami
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inner_background"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:id="@+id/popup_edit_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="1"
        android:gravity="center_vertical|center_horizontal|center">


        <helper.PersianTextView
            android:id="@+id/item_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/item_edit_title"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="normal|bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/dec"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_weight="2"
                android:text="-"
                android:textSize="20sp" />

            <helper.PersianEditText
                android:id="@+id/item_count"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/hint_count"
                android:inputType="number"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/gray" />

            <Button
                android:id="@+id/inc"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_weight="2"
                android:text="+"
                android:textSize="20sp" />

            <helper.PersianTextView
                android:id="@+id/item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/item_edit_title"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:weightSum="9">

            <helper.PersianButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="3dp"
                android:layout_weight="3"
                android:text="@string/cancle" />

            <helper.PersianButton
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="3dp"
                android:layout_weight="3"
                android:text="@string/delete" />

            <helper.PersianButton
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="3dp"
                android:layout_weight="3"
                android:text="@string/confirm" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>